--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,8 +1,8 @@
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -10,8 +10,8 @@
 
 .main {
   padding: 5rem 0;
-  flex: 1;
-  display: flex;
+  /* flex: 1; */
+  /* display: flex; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -24,6 +24,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  bottom: 0;
 }
 
 .footer a {
@@ -119,3 +121,17 @@
     flex-direction: column;
   }
 }
+
+.columnsContainer {
+  margin-top: 2vh;
+}
+
+.hero {
+  margin-top: 50px;
+  img {
+    align-self: flex-end;
+    margin-right: 20px;
+    width: 60vw;
+  }
+}
+
