--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -33,8 +33,8 @@
   cursor: pointer;
 }
 
-.searchIncResultHl {
+.searchIncResultHl,
+.searchIncResult:hover {
   background-color: $yellow;
   opacity: 50%;
-  color: black;
 }
