Removing :hover selector Getting selection dedupe (missing in 2638e2f) for free

--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -33,8 +33,7 @@
   cursor: pointer;
 }
 
-.searchIncResultHl,
-.searchIncResult:hover {
+.searchIncResultHl {
   background-color: $yellow;
   opacity: 50%;
 }
