Alternating styles for list items Clarifies when release and releaseGroup lines wrap Not needed for tracks which are numbers

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -45,6 +45,16 @@
   clear: both;
 }
 
+// Good use case for Sass (ie. concat 'Alt' and avoid duplication
+.resultItemAlt {
+  // taken from bulma...initial-variables.sass
+  // inbetween $grey-lighter and $grey-lightest
+  background-color: hsl(0, 0%, 91%);
+  cursor:pointer;
+  clear: both;
+}
+
+
 .resultItemHl {
   background-color: $yellow;
 }
