--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -28,10 +28,14 @@
 }
 
 .footer a {
-  display: flex;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+  text-decoration: revert;
+}
+
+.footer span {
+  margin-left: 1ex;
 }
 
 .title a {
