Prevent hero from crowding top and footer

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -129,6 +129,10 @@
   margin-top: 2vh;
 }
 
+.headphones {
+  padding: 90px 0px 90px 0px !important;
+}
+
 .hero {
   // Not working. Next-image wraps <img> in another div and sets img position to absolute.
   margin: 200px;
