--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -23,11 +23,14 @@
 .footer {
   width: 100%;
   height: 100px;
-  display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
   bottom: 0;
+  display: none;
+  @media screen and (min-width: $desktop) {
+    display: flex;
+  }
 }
 
 .footer a {
