--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -124,7 +124,7 @@
   margin-left: 0.5rem;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
@@ -132,7 +132,7 @@
 }
 
 .columnsContainer {
-  @media (min-width: $desktop) {
+  @media screen and (min-width: $desktop) {
     padding-left: 5vw;
     padding-right: 5vw;
   }
@@ -140,7 +140,7 @@
 
 // leaving in for reference
 // .columnsContainer > div {
-//   @media (min-width: $desktop) {
+//   @media screen and (min-width: $desktop) {
 //     
 //   }}
 
