--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -3,9 +3,12 @@
 
 .searchContainer {
   display: block;
-  position: absolute;
-  left: 8vw;
-  top: 60px;
+  @media screen and (min-width: $desktop) { 
+    position: absolute;
+    z-index: 2;
+    left: 8vw;
+    top: 60px;
+  }
 }
 
 .inputLevel {
@@ -22,6 +25,8 @@
 }
 
 .searchIncResultList {
+  position: absolute;
+  z-index: 2;
   margin-left: 1.4em;
   background-color: white;
   opacity: 75%;
