Limiting height of list in desktop. preserves space for another possible use.

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -60,7 +60,9 @@
 }
 
 div .rgpop {
-  max-height: 34vh;
+  @media screen and (min-width: $desktop) {
+    max-height: 34vh;
+  }
   overflow-y: scroll;
   border-top: solid thin lightblue;
 }
