--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -144,8 +144,12 @@
 //   }}
 
 .headphones {
+  padding-top: 50px !important;
+  @media screen and (min-width: $tablet) {
+    padding-top: 0px !important;
+  }
   @media screen and (min-width: $desktop) {
-    padding: 90px 0px 90px 0px !important;
+    padding-top: 90px !important;
   }
 }
 
