--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -34,6 +34,16 @@
   flex-shrink: 0;
 }
 
+.countFilter {
+  display: flex;
+}
+
+.resultFilterIcon {
+  line-height: inherit;
+  align-self: center;
+  margin-right: 0.5ex;
+}
+
 .resultBlockLoadingIcon {
   width: 60% !important;
   height: 60%;
@@ -45,7 +55,6 @@
   display: flex;
   justify-content: space-between;
   cursor:pointer;
-  clear: both;
 }
 
 // Good use case for Sass (ie. concat 'Alt' and avoid duplication
@@ -56,7 +65,6 @@
   // inbetween $grey-lighter and $grey-lightest
   background-color: hsl(0, 0%, 91%);
   cursor:pointer;
-  clear: both;
 }
 
 
@@ -92,7 +100,6 @@ span.trackLength {
   font-stretch: condensed;
   font-size: small;
   margin-left: 2ex;
-  float: right;
 }
 
 .resultHeaderImage {
