--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -85,6 +85,11 @@ span.releaseTitle {
   /* white-space: nowrap; */
 }
 
+span.releaseCountry {
+  font-size: smaller;
+  margin-left: .3em;
+}
+
 span.releaseDate {
   font-size: small;
   margin-left: 2ex;
