Aligning date/time "columns" align-self: center is more appropriate than margin-top but fails on line wrap.

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -92,7 +92,7 @@ span.releaseCountry {
 
 span.releaseDate {
   font-size: small;
-  margin-left: 2ex;
+  margin: .5ex 0 0 2ex;
 }
 
 span.trackTitle {
@@ -104,7 +104,7 @@ span.trackLength {
   font-family: monospace;
   font-stretch: condensed;
   font-size: small;
-  margin-left: 2ex;
+  margin: .5ex 0 0 2ex;
 }
 
 .resultHeaderImage {
