Displaying country filter config in modal

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -136,3 +136,8 @@ span.trackLength {
 .largeCoverArtHidden {
   visibility: hidden;
 }
+
+.countryModal {
+  display: flex;
+  justify-content: space-around;
+}
