--- a/styles/FilterConfig.module.scss
+++ b/styles/FilterConfig.module.scss
@@ -17,3 +17,14 @@
 .abbrev {
     width: 3em;
 }
+
+.message {
+    text-align: center;
+    font-size: small;
+}
+
+.link {
+    text-align: center;
+    font-size: small;
+    text-decoration: underline;
+}
