Filter improvements Refactoring the filter function. Disabling filter config when not needed.

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -39,6 +39,14 @@
 }
 
 .resultFilterIcon {
+  color: $grey;
+  line-height: inherit;
+  align-self: center;
+  margin-right: 0.5ex;
+}
+
+.resultFilterIconDisabled {
+  color: $grey-lighter;
   line-height: inherit;
   align-self: center;
   margin-right: 0.5ex;
