--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -22,14 +22,16 @@
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: auto;
   justify-content: center;
   align-items: center;
   position: absolute;
   bottom: 0;
-  display: none;
+  display: flex;
+  font-size: smaller;
+  background-color: rgb(255,255,255,0.8);
   @media screen and (min-width: $desktop) {
-    display: flex;
+    font-size:unset
   }
 }
 
