--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -1,4 +1,3 @@
-@import 'bulma/sass/utilities/initial-variables.sass';
 @import 'bulma/sass/utilities/derived-variables.sass';
 
 .searchContainer {
@@ -33,7 +32,7 @@
   z-index: 2;
   margin-left: 1.4em;
   background-color: white;
-  opacity: 90%;
+  opacity: 85%;
   color: black;
   @media screen and (min-width: $desktop) {
     top: 1.4em;
@@ -46,7 +45,8 @@
 }
 
 .searchIncResultHl {
-  background-color: $yellow;
+  background-color: $info-dark;
+  color: white;
 }
 
 .searchIncResultWarn {
