Scrollable artist search results Up/down keys navigate. Enter selects. Items are focusable too so tab shift-tab also works. Custom highlight and tab highlight (invisible) kept in sync.

--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -27,16 +27,23 @@
 }
 
 .searchIncResultList {
+  display:block;
   position: absolute;
   z-index: 2;
   background-color: white;
   opacity: 85%;
   color: black;
+  max-height: 80vh;
+  overflow-y: scroll;
 }
 
 .searchIncResult {
   font-size: 60%;
   cursor: pointer;
+}
+
+.searchIncResult:focus-visible {
+  outline: none;
 }
 
 .searchIncResultHl {
