--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -7,8 +7,14 @@
   min-height: inherit;
   flex-grow: 1;
   margin: 0.5em 0 0 0.2em;
+  @media screen and (min-width: $tablet) { 
+    margin: .75em 0 0 .75em;
+  }
   @media screen and (min-width: $desktop) { 
-    margin: 1.5em 0 0 1.5em;
+    margin: 1em 0 0 1em;
+  }
+  @media screen and (min-width: $widescreen) { 
+    margin: 1.25em 0 0 1.25em;
   }
 }
 
