--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -50,6 +50,7 @@
 .searchIncResult {
   font-size: 60%;
   cursor: pointer;
+  transition: background-color .5s;
 }
 
 .searchIncResult:focus-visible {
@@ -59,6 +60,7 @@
 .searchIncResultHl {
   background-color: $info-dark;
   color: white;
+  transition: background-color .5s;
 }
 
 .searchIncResultWarn {
