Removing bulma. Styling is nearly identical. Extracting what was needed. Removing modal close button.

--- a/styles/FilterConfig.module.scss
+++ b/styles/FilterConfig.module.scss
@@ -1,3 +1,5 @@
+@import 'initial-variables.sass';
+
 .container {
     background-color: white;
     min-width: 12em;
@@ -31,6 +33,7 @@
 
 .link {
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .footer {
