--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -1,19 +1,22 @@
-@import 'bulma/sass/utilities/derived-variables.sass';
+@import 'initial-variables.sass';
 
 .searchContainer {
-  z-index: 2;
   display: flex;
   flex-direction: row;
-  min-height: inherit;
   flex-grow: 1;
+  font-size: 2rem;
+  min-height: inherit;
   margin: 0.5em 0 0 0.2em;
+  z-index: 2;
   @media screen and (min-width: $tablet) { 
     margin: .75em 0 0 .75em;
   }
   @media screen and (min-width: $desktop) { 
+    font-size: 2.5rem;
     margin: 1em 0 0 1em;
   }
   @media screen and (min-width: $widescreen) { 
+    font-size: 3rem;
     margin: 1.25em 0 0 1.25em;
   }
 }
@@ -48,7 +51,12 @@
 }
 
 .searchIncResult {
+  display: flex;
+  color: #363636;
   font-size: 60%;
+  padding: 0.5em 0.75em;
+  align-items: center;
+  justify-content: flex-start;
   cursor: pointer;
   transition: background-color .5s;
 }
