--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,4 @@
-@import '~bulma/bulma.sass';
-@import '~@fortawesome/fontawesome-svg-core/styles.css';
+@import 'initial-variables.sass';
 
 html,
 body {
@@ -7,6 +6,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  text-rendering: optimizeLegibility;
 }
 
 .columns {
