--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,13 +1,15 @@
-@import 'bulma/sass/utilities/derived-variables.sass';
+@import 'initial-variables.sass';
 
 .container {
-  min-height: 100vh;
-  padding: 0 1.0rem;
-  /* display: flex; */
-  /* flex-direction: column; */
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  min-height: calc(100vh - .75em);
+  padding: 0 .2rem;
+  display: grid;
+  grid-template-rows: 0fr 1fr 0fr;
+  background-color: $grey-lighter;
+  @media screen and (min-width: $tablet) {
+    padding: 0 1.0rem;
+    
+  }
 }
 
 .main {
@@ -19,15 +21,42 @@
   align-items: center;
 }
 
+$column-gap: 0.75rem !default;
+
+.columns {
+  display: block;
+  margin-right: 0;
+  margin-left: 0;
+  @media screen and (min-width: $tablet) {
+    display: flex; 
+  }
+  @media screen and (min-width: $desktop) {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+}
+
+.column {
+  display: block;
+  padding: 0.75rem 0.25rem 0 0.25rem;
+  @media screen and (min-width: $tablet) {
+    flex: none;
+    padding: 0.75rem 0.75rem 0 0.75rem;
+    width: 33%;
+    flex-basis: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+}
+
 .footer {
-  width: 100%;
-  height: auto;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed !important;
   bottom: 0;
   display: flex;
   font-size: smaller;
+  width: 100%;
   background-color: rgb(255,255,255,0.8);
   @media screen and (min-width: $desktop) {
     font-size:unset
@@ -127,30 +156,18 @@
   }
 }
 
-.columnsContainer {
-  @media screen and (min-width: $desktop) {
-    padding-left: 5vw;
-    padding-right: 5vw;
-  }
-}
-
 .artistSearchContainer {
-  text-align: center
+  text-align: center;
+  display: flex;
+  flex: 1 0 10px;
 }
-
-// leaving in for reference
-// .columnsContainer > div {
-//   @media screen and (min-width: $desktop) {
-//     
-//   }}
 
 .headphones {
-  padding-top: 50px !important;
-  @media screen and (min-width: $tablet) {
-    padding-top: 0px !important;
-  }
-  @media screen and (min-width: $desktop) {
-    padding-top: 90px !important;
-  }
+  opacity: .5;
+  object-position: top;
+  object-fit: contain;
+  top: 12rem !important;
+  padding-bottom: 10rem !important;
+  padding-right: 2em !important;
+  margin-left: 1em !important;
 }
-
