--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,12 +4,15 @@
   min-height: calc(100vh - .75em);
   padding: 0 .2rem;
   display: grid;
-  grid-template-rows: 0fr 1fr 0fr;
+  grid-template-rows: 0fr auto auto;
   background-color: $grey-lighter;
   @media screen and (min-width: $tablet) {
     padding: 0 1.0rem;
     
   }
+}
+.container.halved {
+  grid-template-rows: 2em 50% auto;
 }
 
 .main {
@@ -27,6 +30,7 @@ $column-gap: 0.75rem !default;
   display: block;
   margin-right: 0;
   margin-left: 0;
+  overflow-y: hidden;
   @media screen and (min-width: $tablet) {
     display: flex; 
   }
