Reworking track video layout. Showing 6 by default. Using two columns for mobile and making its grid area exandable.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -19,6 +19,9 @@
   grid-template-rows: 2em 50% auto;
 }
 
+.container.maxed {
+  grid-template-rows: 2em 2em auto;
+}
 .main {
   padding: 5rem 0;
   /* flex: 1; */
