Adding sort to list of artists release groups.

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -49,6 +49,9 @@
 }
 
 .count {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
   font-size: 0.75rem;
   padding: 0 0.25rem;
 }
@@ -59,7 +62,7 @@
   padding: 0 0.25rem;
 }
 
-.resultFilterIcon {
+.resultUtilIcon {
   color: $grey;
   line-height: inherit;
   align-self: center;
@@ -67,14 +70,14 @@
   cursor: pointer;
 }
 
-.resultFilterIcon:hover {
+.resultUtilIcon:hover {
   color: $info;
   line-height: inherit;
   align-self: center;
   margin-right: 0.5ex;
 }
 
-.resultFilterIconDisabled {
+.resultUtilIconDisabled {
   color: $grey-lighter;
   line-height: inherit;
   align-self: center;
@@ -188,4 +191,34 @@ span.trackLength {
 .countryModal {
   display: flex;
   justify-content: space-around;
+}
+
+.sortContainer {
+  position: relative;
+}
+
+.sortMenuHidden {
+  display: none;
+}
+
+.sortMenu {
+  position: absolute;
+  right: 0px;
+  background-color: white;
+  border: solid thin $info;
+  border-radius: .5em;
+  padding: .3em .5em;
+  font-size: 1.2em;
+  white-space: nowrap;
+}
+
+.sortChoice {
+  cursor: pointer;
+}
+.sortChoice:not(.sortChoiceActive)::before {
+  content: '☐ ';
+}
+
+.sortChoiceActive::before{
+  content: '☑ '
 }
