Cleaning up the release date. logic/css/markup refactor. Removing  spacers from other components that  use the same style.

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -27,9 +27,13 @@
   font-size: 1.5rem;
 }
 
+.blockHeader {
+  line-height: 2.4em;
+}
+
 .blockHeader ~ .blockHeaderDate {
   padding: 0 0.25rem;
-  line-height: 2.4em;
+  min-height: 2.4em;
 }
 
 .blockHeader.blockHeaderArt {
