--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -31,6 +31,10 @@
   align-items: center;
 }
 
+.icon {
+  margin-right: 0.3em;
+}
+
 $column-gap: 0.75rem !default;
 
 .columns {
@@ -49,15 +53,19 @@ $column-gap: 0.75rem !default;
 
 .column {
   display: block;
-  padding: 0.75rem 0.25rem 0 0.25rem;
+  padding: 0.5rem 0.25rem 0 0.25rem;
   @media screen and (min-width: $tablet) {
     flex: none;
-    padding: 0.75rem 0.75rem 0 0.75rem;
+    padding: 0.5rem 0.75rem 0 0.75rem;
     width: 33%;
     flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 1;
   }
+}
+
+.headColumn {
+  place-self: center;
 }
 
 .column:last-child:not(:only-child) {
