Implementing testing. Adding/configuring Jest and initial tests on a mockup page. Included some mock data. Modified markup up of two components for easier testing and accessibility.

--- a/styles/FilterConfig.module.scss
+++ b/styles/FilterConfig.module.scss
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   font-size: larger;
-  align-items: center
+  align-items: center;
+  padding-inline-start: unset;
 }
 
 .row {
