Improving styling logic of results and sorting.

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -1,4 +1,5 @@
 @import 'initial-variables.sass';
+@import 'sortDialog.sass';
 
 .block {
   background-color: white;
@@ -193,34 +194,4 @@ span.trackLength {
 .countryModal {
   display: flex;
   justify-content: space-around;
-}
-
-.sortContainer {
-  position: relative;
-}
-
-.sortMenuHidden {
-  display: none;
-}
-
-.sortMenu {
-  position: absolute;
-  right: 0px;
-  background-color: white;
-  border: solid thin $info;
-  border-radius: .5em;
-  padding: .3em .5em;
-  font-size: 1.2em;
-  white-space: nowrap;
-}
-
-.sortChoice {
-  cursor: pointer;
-}
-.sortChoice:not(.sortChoiceActive)::before {
-  content: '☐ ';
-}
-
-.sortChoiceActive::before{
-  content: '☑ '
 }
