--- a/styles/AppHistory.module.sass
+++ b/styles/AppHistory.module.sass
@@ -1,4 +1,5 @@
 @import './initial-variables'
+$blockTransTime: 2.0s
 
 .container
   display: flex
@@ -10,10 +11,16 @@
     padding: 0 2vw
   & .column
     flex: auto
-    width: 80%
+    width: 100%
     max-width: 760px
     background-color: $grey-light
-    padding: 2.5em
+    padding: 0 0
+    @media screen and (min-width: $tablet)
+      width: 80%
+      padding: 2.5em
+
+  & a
+    text-decoration: underline
 
 .deployRow
   display: flex
@@ -30,32 +37,57 @@
 .toolBlock
   display: flex
   flex-direction: column
+  margin: 0 calc(.5em + 8px) 0 .5em
   @media screen and (min-width: $desktop)
     flex-direction: row
+    margin: 0 .1em 0 .1em
   margin-bottom: 2rem
-  & .text
-    flex: 1 1
-    &:last-child
-      margin: 0 2em
-      & *:first-child
-        display: inline
   & .toolLogo
-    flex: 1 1
+    flex: 0 0
     margin-left: 0vw
     width: 100%
     height: auto
     text-align: center
-    &:first-child
+    z-index: 2
+  & .text
+    display: inline
+    & *:first-child
       @media screen and (min-width: $desktop)
-        margin: 0 0 0 -6em
+        display: inline
+    @media screen and (min-width: $desktop)
+      align-self: center
+      opacity: 0%
+      transform: scale(0.60)
+      margin-left: -8em
 
 .toolBlockAlt
   @media screen and (min-width: $desktop)
     flex-direction: row-reverse
-  & .toolLogo
-    &:first-child
-      @media screen and (min-width: $desktop)
-        margin: 0 -7em 0 0
-        text-align: right
+    & .toolLogo
+      margin-left: 0vw
+
+.toolBlockFocus:not(.toolBlockAlt) .toolLogo:first-child
+  @media screen and (min-width: $desktop)
+    margin-left: -10em
+    padding-right: 10em
+    transition: all $blockTransTime
+.toolBlockFocus.toolBlockAlt .toolLogo:first-child
+  @media screen and (min-width: $desktop)
+    margin-right: -10em
+    padding-left: 10em
+    transition: all $blockTransTime
+.toolBlockFocus .text
+  @media screen and (min-width: $desktop)
+    opacity: 100%
+    transform: scale(1.0)
+    transform-origin: 120% center
+    transition: all 1.75s ease-out 0.25s
+
+.codeBg
+  overflow: hidden
+  max-height: 20em
+  opacity: 25%
+  &::-webkit-scrollbar
+    width: 0px
 
 
