--- a/styles/AppHistory.module.sass
+++ b/styles/AppHistory.module.sass
@@ -13,7 +13,7 @@ $blockTransTime: 1.5s
     flex: auto
     width: 100%
     max-width: 760px
-    background-color: $grey-light
+    background-color: $white-ter
     padding: 0 0
     @media screen and (min-width: $tablet)
       width: 80%
@@ -33,6 +33,9 @@ $blockTransTime: 1.5s
 .category
   text-align: center
   background-color: white
+
+.h
+  font-size: 1.6em
 
 .toolBlock
   display: flex
@@ -58,6 +61,8 @@ $blockTransTime: 1.5s
       align-self: center
       opacity: 0%
       transform: scale(0.60)
+  &:not(.toolBlockAlt) .text
+    @media screen and (min-width: $desktop)
       margin-left: -8em
 
 .toolBlockAlt
@@ -65,6 +70,12 @@ $blockTransTime: 1.5s
     flex-direction: row-reverse
     & .toolLogo
       margin-left: 0vw
+  & .text
+    @media screen and (min-width: $desktop)
+      align-self: center
+      opacity: 0%
+      transform: scale(0.60)
+      margin-right: -8em
 
 .toolBlockFocus:not(.toolBlockAlt) .toolLogo:first-child
   @media screen and (min-width: $desktop)
@@ -76,18 +87,25 @@ $blockTransTime: 1.5s
     margin-right: -10em
     padding-left: 10em
     transition: all $blockTransTime
-.toolBlockFocus .text
-  @media screen and (min-width: $desktop)
-    opacity: 100%
-    transform: scale(1.0)
-    transform-origin: 120% center
-    transition: all 1s ease-out .5s
+.toolBlockFocus
+  & .text
+    @media screen and (min-width: $desktop)
+      opacity: 100%
+      transform: scale(1.0)
+      transition: all 1s ease-out .5s
+  &:not(.toolBlockAlt) .text
+      @media screen and (min-width: $desktop)
+      transform-origin: right center
+  &.toolBlockAlt .text
+      @media screen and (min-width: $desktop)
+      transform-origin: left center
 
 .codeBg
   overflow: hidden
+  color: black
   max-height: 20em
-  opacity: 25%
-  margin-bottom: 4em
+  opacity: 30%
+  margin: 2em 0 4em 0
   &::-webkit-scrollbar
     width: 0px
 
