Fixing responsive CSS issue. Now logos remain fixed-sized on desktop and responsive on <= tablet. Componentized tool logos.

--- a/styles/AppHistory.module.sass
+++ b/styles/AppHistory.module.sass
@@ -48,10 +48,13 @@ $blockTransTime: 1.5s
   & .toolLogo
     flex: 0 0
     margin-left: 0vw
-    width: 100%
     height: auto
     text-align: center
     z-index: 2
+    & .logoWrapper
+      width: 100%
+      @media screen and (min-width: $desktop)
+        width: max-content
   & .text
     display: inline
     & *:first-child
