Improvments to deploy log, dates, etc. Formatting commits as a datalist. - TODO: create a changelog of all commit msgs between last two deploys. Vars for app name variations. Breaking app specific data (name/title) into separate model. Removing magic scrolling number. Replacing lorem ipsum.

--- a/styles/AppHistory.module.sass
+++ b/styles/AppHistory.module.sass
@@ -22,6 +22,14 @@ $blockTransTime: 1.5s
   & a
     text-decoration: underline
 
+.deploysDl
+  background-color: $grey-lighter
+  max-height: 10em
+  overflow-y: overlay
+  & dt
+    font-family: monospace
+    color: $cyan
+
 .deployRow
   display: flex
 
