Fixing scroll issue.

--- a/styles/AppHistory.module.sass
+++ b/styles/AppHistory.module.sass
@@ -25,7 +25,7 @@ $blockTransTime: 1.5s
 .deploysDl
   background-color: $grey-lighter
   max-height: 10em
-  overflow-y: overlay
+  overflow-y: scroll
   & dt
     font-family: monospace
     color: $cyan
