Shrinking alt text Sometimes FF briefly displays alt text for thumbnail. At least now it fits the small space.

--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -160,6 +160,10 @@ span.trackLength {
   margin: .5ex 0 0 2ex;
 }
 
+.resultHeaderImageLink {
+  font-size: xx-small;
+}
+
 .resultHeaderImage {
   object-fit: contain;
 }
