--- a/styles/AppHistory.module.sass
+++ b/styles/AppHistory.module.sass
@@ -14,7 +14,7 @@ $blockTransTime: 1.5s
     width: 100%
     max-width: 760px
     background-color: $white-ter
-    padding: 0 0
+    padding: 0 calc(0.5em + 8px) 0 0.5em
     @media screen and (min-width: $tablet)
       width: 80%
       padding: 2.5em
@@ -48,7 +48,6 @@ $blockTransTime: 1.5s
 .toolBlock
   display: flex
   flex-direction: column
-  margin: 0 calc(.5em + 8px) 0 .5em
   @media screen and (min-width: $desktop)
     flex-direction: row
     margin: 0 .1em 0 .1em
