Styling tool logos.

--- a/styles/AppHistory.module.sass
+++ b/styles/AppHistory.module.sass
@@ -35,8 +35,20 @@ $blockTransTime: 1.5s
 
 .logo
   display: block
-  border-radius: 1em
-  // border: thin solid #000 !important
+  border-radius: 1em !important
+
+.logoBorder
+  border-width: medium !important
+  border-style: solid !important
+
+.blue
+  border-color: #017afb !important
+
+.orange
+  border-color: #e5753a !important
+
+.teal
+  border-color: teal !important
 
 .category
   text-align: center
