--- a/styles/BreadcrumbsBack.module.scss
+++ b/styles/BreadcrumbsBack.module.scss
@@ -1,3 +1,4 @@
+@import "./initial-variables";
 
 .leadIn {
   flex: 0 0;
@@ -6,16 +7,25 @@
   margin-right: 0.5em;
 }
 
-.crumb {
+.crumbs {
   flex: 2 0;
-  font-size: .9em;
-  place-self: center;
+
+  & *:last-of-type {
+    display: none;
+  }
+
+  @media screen and (min-width: $tablet) {
+    & *:last-of-type {
+      display: unset;
+    }
+  }
+}
+
+.crumb {
+  font-size: 0.9em;
   text-decoration: underline;
-  white-space: nowrap;
-  overflow-y: clip; 
 }
 
 .separator {
-  flex: 0 0;
   margin: 0 0.25em;
 }
