--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -43,6 +43,7 @@ $column-gap: 0.75rem !default;
   display: block;
   margin-right: 0;
   margin-left: 0;
+  margin-top: 0.5em;
   @media screen and (min-width: $tablet) {
     overflow-y: hidden;
     display: flex;
@@ -68,13 +69,21 @@ $column-gap: 0.75rem !default;
 
 .headColumn {
   display: flex;
-  overflow-x: hidden;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  overflow: hidden;
+  padding: unset;
+  max-height: 1.5em;
 }
 
 .toolbar {
   flex: 0 0;
   display: block;
   white-space: nowrap;
+}
+
+.toolbar {
+  cursor: pointer;
 }
 
 .column:last-child:not(:only-child) {
