Linking the tools to external pages.

--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -65,6 +65,7 @@ $blockTransTime: 1.5s
     margin: 0 .1em 0 .1em
   margin-bottom: 2rem
   & .toolLogo
+    display: block
     flex: 0 0
     margin-left: 0vw
     height: auto
