--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -71,17 +71,23 @@ $blockTransTime: 1.5s
     height: auto
     text-align: center
     z-index: 2
+    @media screen and (min-width: $desktop)
+      transition: all 1s ease-out 0s
     & .logoWrapper
       width: 100%
       @media screen and (min-width: $desktop)
         width: max-content
   & .text
     display: inline
+    padding: 0.5em
+    border-radius: 0.5em
+    @media screen and (min-width: $desktop)
+      transition: all 1s ease-out 0s
     & *:first-child
       @media screen and (min-width: $desktop)
         display: inline
     @media screen and (min-width: $desktop)
-      align-self: center
+      align-self: flex-start
       opacity: 0%
       transform: scale(0.60)
   &:not(.toolBlockAlt) .text
@@ -95,9 +101,6 @@ $blockTransTime: 1.5s
       margin-left: 0vw
   & .text
     @media screen and (min-width: $desktop)
-      align-self: center
-      opacity: 0%
-      transform: scale(0.60)
       margin-right: -8em
 
 .toolBlockFocus:not(.toolBlockAlt) .toolLogo:first-child
@@ -124,12 +127,28 @@ $blockTransTime: 1.5s
       transform-origin: left center
 
 .codeBg
-  overflow: hidden
+  background-color: $grey-lighter
+  border-radius: 1em
+  position: relative
+  font-family: monospace
+  min-height: 10rem
+  max-height: 10rem
+  overflow-x: hidden
+  margin: 2rem 0 4rem 0
   color: black
-  max-height: 20em
-  opacity: 30%
-  margin: 2em 0 4em 0
   &::-webkit-scrollbar
     width: 0px
+  & div
+    min-height: 10rem
+    max-height: 10rem
+    overflow: hidden
+    position: absolute
+  & div:first-child
+    left: 20rem
+    font-size: .5em
+    opacity: 40%
+  & div:last-child
+    font-size: 1em
+    opacity: 20%
 
 
