--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -14,13 +14,24 @@ $blockTransTime: 1.5s
     width: 100%
     max-width: 760px
     background-color: $white-ter
-    padding: 0 calc(0.5em + 8px) 0 0.5em
+    padding: 0.25em calc(0.5em + 8px) 0 0.5em
     @media screen and (min-width: $tablet)
       width: 80%
-      padding: 2.5em
-
+      padding: .5em 2.5em 2.5em 2.5em
   & a
     text-decoration: underline
+
+.header
+  display: flex
+  justify-content: space-between
+  align-items: center
+  & a
+    height: 2em
+    align-self: flex-start
+  & details
+    & summary
+      display: inline list-item
+      align-items: center
 
 .deploysDl
   background-color: $grey-lighter
@@ -60,10 +71,10 @@ $blockTransTime: 1.5s
 .toolBlock
   display: flex
   flex-direction: column
+  margin-bottom: 1rem
   @media screen and (min-width: $desktop)
     flex-direction: row
-    margin: 0 .1em 0 .1em
-  margin-bottom: 2rem
+    margin: 1rem .1em 1rem .1em
   & .toolLogo
     display: block
     flex: 0 0
@@ -134,7 +145,7 @@ $blockTransTime: 1.5s
   min-height: 10rem
   max-height: 10rem
   overflow-x: hidden
-  margin: 2rem 0 4rem 0
+  margin: 1rem 0 2rem 0
   color: black
   &::-webkit-scrollbar
     width: 0px
@@ -146,7 +157,7 @@ $blockTransTime: 1.5s
   & div:first-child
     left: 20rem
     font-size: .5em
-    opacity: 40%
+    opacity: 20%
   & div:last-child
     font-size: 1em
     opacity: 20%
