Adjusting block spacing. Dynamic small code example left.

--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -68,6 +68,9 @@ $blockTransTime: 1.5s
 .h
   font-size: 1.6em
 
+.toolContainer
+  padding-bottom: 2em
+
 .toolBlock
   display: flex
   flex-direction: column
@@ -145,7 +148,7 @@ $blockTransTime: 1.5s
   min-height: 10rem
   max-height: 10rem
   overflow-x: hidden
-  margin: 1rem 0 2rem 0
+  margin: 1rem 0 0 0
   color: black
   &::-webkit-scrollbar
     width: 0px
@@ -155,7 +158,7 @@ $blockTransTime: 1.5s
     overflow: hidden
     position: absolute
   & div:first-child
-    left: 20rem
+    left: 20vw
     font-size: .5em
     opacity: 20%
   & div:last-child
