Changing overflow scroll value.

--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -14,7 +14,7 @@ $blockTransTime: 1.5s
     width: 100%
     max-width: 760px
     background-color: $white-ter
-    padding: 0.25em calc(0.5em + 8px) 0 0.5em
+    padding: 0.25em 8px 0 0.5em
     @media screen and (min-width: $tablet)
       width: 80%
       padding: .5em 2.5em 2.5em 2.5em
