--- a/styles/ResultBlock.module.scss
+++ b/styles/ResultBlock.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   max-height: 100%;
+  scrollbar-width: thin;
 }
 
 h2.blockTypeH {
@@ -129,7 +130,7 @@ h2.blockTypeH {
 }
 
 .resultsList {
-  overflow-y: overlay;
+  overflow-y: scroll;
   border-top: solid thin lightblue;
 }
 
