--- a/styles/YoutubeVideos.module.scss
+++ b/styles/YoutubeVideos.module.scss
@@ -4,7 +4,7 @@
   display:inline-grid;
   grid-template-columns: 50% 50%;
   width: 100%;
-  overflow-x: overlay;
+  overflow-x: scroll;
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: row;
