Adjusting header/footer alignment/size.

--- a/styles/initial-variables.sass
+++ b/styles/initial-variables.sass
@@ -66,3 +66,6 @@ $widescreen-enabled: true !default
 // 1344px container + 4rem
 $fullhd: 1344px + (2 * $gap) !default
 $fullhd-enabled: true !default
+
+$left-right-padding-tablet: 0.75rem
+$footer-height: 1.5rem
