--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,7 @@
 @import 'initial-variables.sass';
 
 .container {
-  min-height: calc(100vh - .75em);
+  min-height: calc(100vh - #{$footer-height});
   max-height: 10px;
   padding: 0 .2rem;
   display: flex;
@@ -30,8 +30,6 @@
   margin-right: 0.3em;
 }
 
-$column-gap: 0.75rem !default;
-
 .columns {
   display: block;
   margin-right: 0;
@@ -47,13 +45,17 @@ $column-gap: 0.75rem !default;
   }
 }
 
+.columns:first-child {
+  flex-shrink: 0;
+}
+
 .column {
   flex: 1 0;
   display: block;
   padding: 0.5rem 0.25rem 0 0.25rem;
   @media screen and (min-width: $tablet) {
     flex: none;
-    padding: 0.5rem 0.75rem 0 0.75rem;
+    padding: 0.5rem $left-right-padding-tablet 0 $left-right-padding-tablet;
     width: 33%;
     flex-basis: 0;
     flex-grow: 1;
@@ -69,6 +71,10 @@ $column-gap: 0.75rem !default;
   overflow: hidden;
   padding: unset;
   max-height: 1.5em;
+  @media screen and (min-width: $tablet) {
+    padding-left: $left-right-padding-tablet;
+    padding-right: $left-right-padding-tablet;
+  }
 }
 
 .trackDetails {
@@ -98,6 +104,7 @@ $column-gap: 0.75rem !default;
   font-size: smaller;
   width: 100%;
   background-color: rgb(255,255,255,0.8);
+  max-height: $footer-height;
   @media screen and (min-width: $desktop) {
     font-size:unset
   }
