Better code fonts.

--- a/styles/About.module.sass
+++ b/styles/About.module.sass
@@ -144,7 +144,7 @@ $blockTransTime: 1.5s
   background-color: $grey-lighter
   border-radius: 1em
   position: relative
-  font-family: monospace
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace
   min-height: 10rem
   max-height: 10rem
   overflow-x: hidden
